Fix wrapping

--- a/hug_website/static/sass/_home.sass
+++ b/hug_website/static/sass/_home.sass
@@ -8,8 +8,9 @@
         font-size: 23px
         padding-top: 20px
 .intro
+    +clearfix
     position: relative
-    height: 290px
+    min-height: 290px
     background: #7895A0
 
     .koala
